# allinn_tools

./: .env.sample  .gitignore  README.md  pyproject.toml
allinn_tools/: __init__.py  __main__.py  cli.py
allinn_tools/commands/: __init__.py  shinkansen.py
allinn_tools/core/: __init__.py  base_command.py
docs/: howtouseEstat.md  shinkansen.md
inputs/shinkansen/: shinkansen_stations.json
outputs/: shinkansen.csv
